Sistema de login pelo Repository.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".view.MainActivity">
 
+<!--<com.google.android.material.appbar.AppBarLayout-->
+<!--    android:id="@+id/appBarLayout"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:theme="@style/Theme.BusinessControlV3.AppBarOverlay"-->
+<!--    android:layout_constraintEnd_toEndOf="parent"-->
+<!--    android:layout_constraintStart_toEndOf="parent"-->
+<!--    android:layout_constraintTop_toTopOf="parent"></com.google.android.material.appbar.AppBarLayout>-->
+
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
