--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".view.LoginActivity">
+
+    <data>
+        <variable
+            name = "viewmodel"
+            type = "com.example.businesscontrolv3.viewModel.LoginViewModel"/>
+    </data>
+
+
+<androidx.constraintlayout.widget.ConstraintLayout
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.LoginActivity">
+    >
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -12,14 +24,15 @@
         android:layout_width="65dp"
         android:layout_height="62dp"
         android:layout_marginStart="173dp"
-        android:layout_marginTop="61dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="173dp"
         android:layout_marginBottom="32dp"
+        android:visibility="@{viewmodel.loadingVisibility}"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/PasswordET" />
+        app:layout_constraintTop_toBottomOf="@+id/ErrorMessageTV" />
 
     <EditText
         android:id="@+id/emailET"
@@ -32,6 +45,7 @@
         android:ems="10"
         android:hint="e-mail"
         android:inputType="textEmailAddress"
+        android:text="@={viewmodel.email}"
         app:layout_constraintBottom_toTopOf="@+id/PasswordET"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -45,11 +59,10 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="101dp"
-        android:layout_marginBottom="61dp"
         android:ems="10"
         android:hint="password"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/progressBar"
+        android:text="@={viewmodel.password}"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailET" />
@@ -62,11 +75,29 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="159dp"
         android:layout_marginBottom="150dp"
-        android:onClick="enviarNomeParaNextView"
+        android:onClick="login"
         android:text="Enviar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/progressBar" />
+
+    <TextView
+        android:id="@+id/ErrorMessageTV"
+        android:layout_width="51dp"
+        android:layout_height="57dp"
+        android:layout_marginStart="178dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="225dp"
+        android:layout_marginBottom="8dp"
+        android:text="@{viewmodel.errorMessage}"
+        android:textColor="@color/purple_200"
+        app:layout_constraintBottom_toTopOf="@+id/progressBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/PasswordET" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
