--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -26,4 +26,6 @@
         <item name="fullscreenBackgroundColor">@color/light_blue_600</item>
         <item name="fullscreenTextColor">@color/light_blue_A200</item>
     </style>
+
+<!--    <style name="Theme.BusinessControlV3.Fullscreen" parent="Theme.MaterialComponents.BottomSheetDialog"></style>-->
 </resources>
